Fix overflow of rows from container using flex

--- a/style.css
+++ b/style.css
@@ -3,10 +3,9 @@
 .container {
   display: flex;
   flex-direction: column;
+  flex-wrap: nowrap;
   align-items: stretch;
   justify-content: stretch;
-  flex-wrap: wrap;
-  overflow: auto;
   background-color: #011627;
   height: 90vh;
   width: 90vw;
